fix: bio text adjustment on mobile

--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -181,4 +181,8 @@
   .heroContent {
     flex-flow: column nowrap;
   }
+
+  .bio {
+    --font-size: 18px;
+  }
 }
